--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "~8.2.0",
     "hammerjs": "^2.0.8",
     "material-design-icons": "^3.0.1",
+    "ngx-electron": "^2.1.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
