--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
+    "express": "^4.17.1",
     "hammerjs": "^2.0.8",
     "material-design-icons": "^3.0.1",
     "ngx-electron": "^2.1.1",
